--- a/app/views/admin/reservations/books.html.erb
+++ b/app/views/admin/reservations/books.html.erb
@@ -1,18 +1,18 @@
 <div style="width: 15%; height:500px; border: 1px solid;float: left;">
-  <%= render 'admin/salons/sidebar' %>
+  <%= render 'admin/stylists/sidebar' %>
 </div>
 
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-  <h2><%= current_salon.name %>の予約一覧</h2>
+  <h2><%= current_stylist.name %>の予約一覧</h2>
   <div class="table-responsive">
     <table class="table table-striped table-sm">
       <thead>
       <tr>
         <th>顧客名</th>
         <th>予約日時</th>
-        <th>スタイリスト名</th>
+        <th>サロン名</th>
+        <th>サロン場所</th>
         <th>メニュー名</th>
-        <th>施術時間</th>
         <th>詳細</th>
         <th>削除</th>
       </tr>
@@ -23,11 +23,11 @@
         <tr>
           <td><%= r.user.name %></td>
           <td><%= r.stylist_reservation.simple_time %></td>
-          <td><%= r.stylist_reservation.stylist.name %></td>
+          <td><%= r.salon_reservation.salon.name %></td>
+          <td><%= r.salon_reservation.salon.place %></td>
           <td><%= r.menu.menu_name %></td>
-          <td><%= r.stylist_reservation.operation_time %>分</td>
-          <td><%= link_to '詳細', admin_salon_reservation_path(r) %></td>
-          <td><%= link_to '削除', admin_salon_reservation_path(r), method: :delete, data: { confirm: "削除しますか？" } %></td>
+          <td><%= link_to '詳細', admin_stylist_stylist_reservation_path(r.stylist_reservation.id) %></td>
+          <td><%= link_to '削除', admin_stylist_stylist_reservation_path(r.stylist_reservation.id), method: :delete, data: { confirm: "削除しますか？" } %></td>
         </tr>
       <% end %>
       </tbody>
