--- a/app/views/admin/reservations/history.html.erb
+++ b/app/views/admin/reservations/history.html.erb
@@ -2,23 +2,31 @@
   <%= render 'admin/salons/sidebar' %>
 </div>
 
-<div style="width:80%; border: 1px solid;float: right; margin: auto 0;padding-left: 20px;">
-  <h3>取引スタイリスト</h3>
-  <table style="text-align: center; margin-bottom: 30px;">
-    <thead>
-    <tr>
-      <th>所属サロン</th>
-      <th>スタイリスト名</th>
-    </tr>
-    </thead>
-
-    <tbody>
-    <% @stylists.each do |s| %>
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+  <h2>取引履歴</h2>
+  <div class="table-responsive">
+    <table class="table table-striped table-sm">
+      <thead>
       <tr>
-        <td><%= link_to s.salon_reservation.salon.name, salon_path(s.salon_reservation.salon.id) %></td>
-        <td><%= link_to s.stylist_reservation.stylist.name, stylist_path(s.stylist_reservation.stylist.id) %></td>
+        <th>#</th>
+        <th>所属サロン</th>
+        <th>スタイリスト名</th>
+        <th>施術内容</th>
+        <th>詳細</th>
       </tr>
-    <% end %>
-    </tbody>
-  </table>
-</div>
+      </thead>
+
+      <tbody>
+      <% @stylists.each.with_index(1) do |s, i| %>
+        <tr>
+          <td><%= i %></td>
+          <td><%= s.salon_reservation.salon.name %></td>
+          <td><%= s.stylist_reservation.stylist.name %></td>
+          <td><%= s.menu.menu_name %></td>
+          <td>#</td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+</main>
