--- a/app/views/admin/salons/show.html.erb
+++ b/app/views/admin/salons/show.html.erb
@@ -1,45 +1,68 @@
-<div style="width: 15%; height:500px; border: 1px solid;float: left;">
+<div class="row">
   <%= render 'admin/salons/sidebar' %>
 </div>
 
-<div style="width:80%; border: 1px solid;float: right; margin: auto 0;padding-left: 20px;">
-  <h2><%= @salon.name %></h2>
-  カテゴリー:<%= @salon.category.name %><br/>
-  サロン名:<%= @salon.name %><br/>
-  都道府県:<%= @salon.prefecture.name %><br/>
-  場所:<%= @salon.place %><br/>
-  責任者:<%= @salon.manage %><br/>
-  TEL:<%= @salon.tel %><br/>
-  Email:<%= @salon.email %><br/>
-  特徴:<%= @salon.features %><br/>
-  カット価格:<%= @salon.cut_price %><br/>
-  所属スタイリスト数:<%= @salon.num_of_stylists %><br/>
-  座席数:<%= @salon.num_of_sheets %>
-  <br/>
-  <%= link_to 'Edit', edit_admin_salon_path %>
-  <%= link_to 'Delete', admin_salon_path, method: :delete, data: { confirm: "You sure?" } %>
-  <%= link_to 'Logout', destroy_salon_session_path, method: :delete %>
-  <h3>予約一覧</h3>
-  <table style="text-align: center; margin-bottom: 30px;">
-    <thead>
-    <tr>
-      <th>予約日時</th>
-      <th>スタイリスト名</th>
-      <th>メニュー名</th>
-      <th>施術予定時間</th>
-    </tr>
-    </thead>
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Dashboard</h1>
+    <div class="btn-toolbar mb-2 mb-md-0">
+      <div class="btn-group mr-2">
+        <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+      </div>
+      <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+        <span data-feather="calendar"></span>
+        This week
+      </button>
+    </div>
+  </div>
 
-    <tbody>
-    <% @books.each do |b| %>
-      <tr>
-        <td><%= b.stylist_reservation.simple_time %></td>
-        <td><%= b.stylist_reservation.stylist.name %></td>
-        <td><%= b.menu.menu_name %></td>
-        <td><%= b.stylist_reservation.operation_time %>分</td>
-        <td><%= link_to '詳細', admin_salon_reservation_path(b) %></td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-</div>
+  <!--  <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>-->
+
+  <div style="padding-top: 30px">
+    <h2><%= @salon.name %>情報</h2>
+    カテゴリー:<%= @salon.category.name %><br/>
+    サロン名:<%= @salon.name %><br/>
+    都道府県:<%= @salon.prefecture.name %><br/>
+    場所:<%= @salon.place %><br/>
+    責任者:<%= @salon.manage %><br/>
+    TEL:<%= @salon.tel %><br/>
+    Email:<%= @salon.email %><br/>
+    特徴:<%= @salon.features %><br/>
+    カット価格:<%= @salon.cut_price %>円<br/>
+    所属スタイリスト数:<%= @salon.num_of_stylists %><br/>
+    座席数:<%= @salon.num_of_sheets %>
+    <br/>
+    <%= link_to 'Edit', edit_admin_salon_path %>
+    <%= link_to 'Delete', admin_salon_path, method: :delete, data: { confirm: "You sure?" } %>
+    <%= link_to 'Logout', destroy_salon_session_path, method: :delete %>
+  </div>
+
+  <div style="padding-top: 30px">
+    <h2>予約一覧</h2>
+    <div class="table-responsive">
+      <table class="table table-striped table-sm">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>予約日時</th>
+          <th>スタイリスト名</th>
+          <th>メニュー名</th>
+          <th>施術予定時間</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @books.each do |b| %>
+          <tr>
+            <td><%= b.stylist_reservation.simple_time %></td>
+            <td><%= b.stylist_reservation.stylist.name %></td>
+            <td><%= b.menu.menu_name %></td>
+            <td><%= b.stylist_reservation.operation_time %>分</td>
+            <td><%= link_to '詳細', admin_salon_reservation_path(b) %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</main>
