--- a/app/views/admin/stylists/_sidebar.html.erb
+++ b/app/views/admin/stylists/_sidebar.html.erb
@@ -1,13 +1,87 @@
-<ul>
-  <li><%= link_to current_stylist.name, admin_stylist_path %></li>
-  <li><%= link_to "所属サロン:#{current_stylist.salon.name}", salon_path(current_stylist.salon) %></li>
-  <li><%= link_to "予約時間管理", admin_stylist_stylist_reservations_path %></li>
-  <li><%= link_to '予約管理', "#" %></li>
-  <li><%= link_to "メニュー管理", admin_stylist_menus_path %></li>
-  <li><%= link_to "売上管理", "#" %></li>
-  <li><%= link_to '顧客カルテ管理', "#" %></li>
-  <li><%= link_to '取引サロン管理', "#" %></li>
-  <li><%= link_to 'サロン利用規約管理', "#" %></li>
-  <li><%= link_to '設定', edit_admin_stylist_path %></li>
-  <li><%= link_to 'ログアウト', destroy_stylist_session_path, method: :delete %></li>
-</ul>
+<nav class="col-md-2 d-none d-md-block bg-light sidebar">
+  <div class="sidebar-sticky">
+    <ul class="nav flex-column">
+      <li class="nav-item">
+        <span data-feather="home"></span>
+        <%= link_to current_stylist.name, admin_stylist_path, class: "nav-link active" %>
+        <span class="sr-only">(current)</span>
+      </li>
+      <li class="nav-item">
+        <span data-feather="file"></span>
+        <%= link_to "所属サロン:#{current_stylist.salon.name}", salon_path(current_stylist.salon), class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="file"></span>
+        <%= link_to "予約時間管理", admin_stylist_stylist_reservations_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="shopping-cart"></span>
+        <%= link_to '予約管理', books_admin_stylist_path , class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="users"></span>
+        <%= link_to "メニュー管理", admin_stylist_menus_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="bar-chart-2"></span>
+        <%= link_to "売上管理", "#", class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="bar-chart-2"></span>
+        <%= link_to '顧客カルテ管理', "#", class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="bar-chart-2"></span>
+        <%= link_to '取引サロン管理', "#", class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="bar-chart-2"></span>
+        <%= link_to 'サロン利用規約管理', "#", class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="bar-chart-2"></span>
+        <%= link_to '設定', edit_admin_stylist_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="bar-chart-2"></span>
+        <%= link_to 'ログアウト', destroy_stylist_session_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <span data-feather="layers"></span>
+      </li>
+    </ul>
+
+    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+      <span>Saved reports</span>
+      <a class="d-flex align-items-center text-muted" href="#">
+        <span data-feather="plus-circle"></span>
+      </a>
+    </h6>
+    <ul class="nav flex-column mb-2">
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <span data-feather="file-text"></span>
+          Current month
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <span data-feather="file-text"></span>
+          Last quarter
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <span data-feather="file-text"></span>
+          Social engagement
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <span data-feather="file-text"></span>
+          Year-end sale
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
