--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= render 'layouts/header' %>
 </header>
 <body>
-<div class="container">
+<div class="container-fluid">
   <%= render 'shared/flash' %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
