--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h2>About US</h2>
+<p>当サービスは美容室の空き時間/空き座席をフリーランスの美容師・ユーザーに気軽に有料で貸し出せるスペースシェアリングサービスです。</p>
+
+<p>2019年現在、美容室数は約25万件、美容師数は約50万人いるとされています。</p>
+
+<p>美容室の数は年々増加している一方、毎年数千もの美容室が閉店しており、<a style="color: red">開店から3年での閉店率は実に80％を超える</a>とも言われています。</p>
+
+<p>そこで美容室側の使っていない状態の座席(=デッドスペース)を独立した美容師に解放することで、</p>
+
+<p>美容室側にはデッドスペースを有効活用して収益化の方法を提供し、美容師側には「独立=自店舗を持つ」以外の選択肢を持てることで資金的なリスクを減らしつつ独立を可能にします。</p>
