--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<h2>問い合わせについて</h2>
+<p>当サービスは<a href="https://twitter.com/all_akumasan">@all_akumasan</a>によって運営されています。</p>
+
+<p>ご用のある方はこちらのDMまでご連絡ください。</p>
