--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,15 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h2>Help</h2>
+<p style="color: red">*当サービスは<a href="https://twitter.com/all_akumasan">@all_akumasan</a>が作成したサービスです。</p>
+<p style="color: red">開発状況によって予告なく閉鎖等を行う場合もあることを承知の上、ご利用をお願い致します。</p>
+
+<h3>当サービスの使い方</h3>
+
+<div style="width: 50%; background-color: #DADADA; border-radius: 10px; padding: 30px">
+  <ul>
+    <li>美容室側が空き座席のある時間等を登録</li>
+    <li>美容師側が施術できる時間や地域、提供可能なメニューを登録</li>
+    <li>ユーザーは施術して欲しいスタイリストと施術を受けたい場所、受けたいメニューを指定して予約</li>
+    <li>クレジット決済することで美容室・美容師・ユーザーはそれぞれキャッシュレスでスムーズな決済が可能です(*今後実装予定)</li>
+    <li>施術完了後、それぞれのレビューを投稿して一連の取引を完了します。</li>
+  </ul>
+</div>
