--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark navbar-expand-lg navbar-light fixed-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Beauty Spaces</a>
+  <%= link_to 'Beauty Spaces', root_path, class: "navbar-brand col-sm-3 col-md-2 mr-0" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,10 +15,10 @@
         <%= link_to "About", about_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Help", about_path, class: "nav-link" %>
+        <%= link_to "Help", help_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Contact", about_path, class: "nav-link" %>
+        <%= link_to "Contact", contact_path, class: "nav-link" %>
       </li>
       <% if salon_signed_in? %>
         <li class="nav-item">
