Modify top views

--- a/app/views/layouts/_top_one.html.erb
+++ b/app/views/layouts/_top_one.html.erb
@@ -1,15 +1,8 @@
 <div class="landding-page" style="padding-top: 100px">
   <div style="border: 1px solid; width: 40%;margin-left: 5%; padding: 20px;border-radius: 5px; background-color: white;">
     <h2>お気に入りの美容室と、<br/>お気に入りのスタイリストで<br/>最高の時間を</h2>
-    <h3>エリア</h3>
-    <div style="border: 0.5px solid gray; border-radius: 5px; padding: 10px 0 0 10px; height: 40px;">
-      <span style="font-size: 20px; color: gray">どこでも</span>
+    <div style="text-align: center;">
+      <%= link_to '予約する', reservations_path, class: "btn btn-light btn-lg btn-block" %>
     </div>
-    <h3>スタイリスト</h3>
-    <div style="border: 0.5px solid gray; border-radius: 5px; padding: 10px 0 0 10px; height: 40px;">
-      <span style="font-size: 20px; color: gray">誰でも</span>
-    </div>
-    <br/>
-    <button style="border: 1px solid; width: 15%; border-radius: 5px; text-align: center; height: 50px;margin-left: 80%">探す</button>
   </div>
 </div>
