--- a/app/views/admin/salons/show.html.erb
+++ b/app/views/admin/salons/show.html.erb
@@ -5,16 +5,16 @@
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Dashboard</h1>
-    <div class="btn-toolbar mb-2 mb-md-0">
-      <div class="btn-group mr-2">
-        <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-      </div>
-      <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-        <span data-feather="calendar"></span>
-        This week
-      </button>
-    </div>
+    <!--    <div class="btn-toolbar mb-2 mb-md-0">-->
+    <!--      <div class="btn-group mr-2">-->
+    <!--        <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>-->
+    <!--        <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>-->
+    <!--      </div>-->
+    <!--      <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">-->
+    <!--        <span data-feather="calendar"></span>-->
+    <!--        This week-->
+    <!--      </button>-->
+    <!--    </div>-->
   </div>
 
   <!--  <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>-->
@@ -33,9 +33,6 @@
     所属スタイリスト数:<%= @salon.num_of_stylists %><br/>
     座席数:<%= @salon.num_of_sheets %>
     <br/>
-    <%= link_to 'Edit', edit_admin_salon_path %>
-    <%= link_to 'Delete', admin_salon_path, method: :delete, data: { confirm: "You sure?" } %>
-    <%= link_to 'Logout', destroy_salon_session_path, method: :delete %>
   </div>
 
   <div style="padding-top: 30px">
