--- a/app/views/admin/reservations/show.html.erb
+++ b/app/views/admin/reservations/show.html.erb
@@ -3,33 +3,26 @@
 </div>
 
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-  <table style="text-align: center; margin-bottom: 30px;">
-    <thead>
-    <tr>
-      <th>予約日時</th>
-      <th>スタイリスト名</th>
-      <th>メニュー名</th>
-      <th>取引状態</th>
-      <th>取引メモ</th>
-    </tr>
-    </thead>
-
-    <tbody>
-    <tr>
-      <td><%= @reservation.stylist_reservation.simple_time %></td>
-      <td><%= @reservation.stylist_reservation.stylist.name %></td>
-      <td><%= @reservation.menu.menu_name %></td>
-      <td>
-        <% if @reservation.finish_salon.nil? %>
+  <h2>取引内容</h2>
+  <div class="my-3 p-3 bg-white rounded shadow">
+    <h6 class="border-bottom border-gray pb-2 mb-0">
+      顧客名:<%= @reservation.user.name %><br/>
+      スタイリスト:<%= @reservation.stylist_reservation.stylist.name %></h6>
+    <div class="media text-muted pt-3">
+      <ul>
+        <li>予約日時:<%= @reservation.stylist_reservation.simple_time %></li>
+        <li>メニュー名:<%= @reservation.menu.menu_name %></li>
+        <li>価格:<%= @reservation.menu.menu_price %>円</li>
+        <li>取引状態:
+        <% if @reservation.finish_salon? %>
+          <a style="color: red;">取引完了済</a>
+        <% else %>
           <%= form_for(@reservation, url: admin_salon_reservation_path) do |f| %>
             <%= f.hidden_field :finish_salon, value: true %>
             <%= f.submit ' 取引完了' %>
           <% end %>
-        <% else %>
-          取引完了済
-        <% end %>
-      </td>
-      <td>
+          <% end %></li>
+        <li>取引メモ:
         <% if @reservation.salon_memo.nil? %>
           <%= form_for(@reservation, url: admin_salon_reservation_path) do |f| %>
             <%= f.text_field :salon_memo %>
@@ -38,9 +31,10 @@
         <% else %>
           <%= @reservation.salon_memo %>
         <% end %>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-  <%= link_to '戻る', :back %>
+        </li>
+      </ul>
+    </div>
+    <%= link_to 'delete', admin_salon_reservation_path, method: :delete, data: { confirm: "本当に削除しますか？" } %><br/>
+    <%= link_to '戻る', :back %>
+  </div>
 </main>
