--- a/app/views/admin/salons/_sidebar.html.erb
+++ b/app/views/admin/salons/_sidebar.html.erb
@@ -15,12 +15,12 @@
         <%= link_to '予約管理', admin_salon_reservations_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <span data-feather="users"></span>
-        <%= link_to "所属スタイリスト", admin_salon_stylists_path, class: "nav-link" %>
+        <span data-feather="bar-chart-2"></span>
+        <%= link_to "取引管理", sales_admin_salon_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <span data-feather="bar-chart-2"></span>
-        <%= link_to "売上管理", "#", class: "nav-link" %>
+        <span data-feather="users"></span>
+        <%= link_to "所属スタイリスト", admin_salon_stylists_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <span data-feather="bar-chart-2"></span>
