--- a/app/views/admin/stylists/index.html.erb
+++ b/app/views/admin/stylists/index.html.erb
@@ -4,7 +4,30 @@
 
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
   <h2><%= current_salon.name %>所属スタイリスト</h2>
-  <% @stylists.each.with_index(1) do |s, i| %>
-    <%= i %>.<%= s.name %>
-  <% end %>
+  <div class="table-responsive">
+    <table class="table table-striped table-sm">
+      <thead>
+      <tr>
+        <th>#</th>
+        <th>カテゴリー</th>
+        <th>スタイリスト名</th>
+        <th>TEL</th>
+        <th>Email</th>
+        <th>価格</th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @stylists.each.with_index(1) do |s, i| %>
+        <tr>
+          <td><%= i %></td>
+          <td><%= s.category.name %></td>
+          <td><%= s.name %></td>
+          <td><%= s.tel %></td>
+          <td><%= s.email %></td>
+          <td><%= s.cut_price %>円</td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 </main>
