--- a/app/views/salons/index.html.erb
+++ b/app/views/salons/index.html.erb
@@ -1,4 +1,17 @@
-<h1>Salons#index</h1>
+<h1>美容室一覧</h1>
 <% @salons.each.with_index(1) do |s, i| %>
-  <%= i %>:<%= s.name %><br/>
+  <div class="my-3 p-3 bg-white rounded shadow">
+    <h6 class="border-bottom border-gray pb-2 mb-0"><%= s.name %></h6>
+    <div class="media text-muted pt-3">
+     <ul>
+       <li>カテゴリー:<%= s.category.name %></li>
+       <li>都道府県:<%= s.prefecture.name %></li>
+       <li>所在:<%= s.place %></li>
+       <li>TEL:<%= s.tel %></li>
+       <li>Email:<%= s.email %></li>
+       <li>サロンの特徴:<%= s.features %></li>
+     </ul>
+    </div>
+    <%= link_to '詳細', salon_path(s) %>
+  </div>
 <% end %>
