--- a/app/views/admin/reservations/show.html.erb
+++ b/app/views/admin/reservations/show.html.erb
@@ -13,25 +13,24 @@
         <li>予約日時:<%= @reservation.stylist_reservation.simple_time %></li>
         <li>メニュー名:<%= @reservation.menu.menu_name %></li>
         <li>価格:<%= @reservation.menu.menu_price %>円</li>
-        <li>取引状態:
-          <% if @reservation.finish_salon? %>
+        <% if @reservation.finish_salon? %>
+          <li>取引状態:
             <a style="color: red;">取引完了済</a>
-          <% else %>
-            <%= form_for(@reservation, url: admin_salon_reservation_path) do |f| %>
-              <%= f.hidden_field :finish_salon, value: true %>
-              <%= f.submit ' 取引完了' %>
-            <% end %>
-          <% end %></li>
-        <li>取引メモ:
-          <% if @reservation.salon_memo.nil? %>
-            <%= form_for(@reservation, url: admin_salon_reservation_path) do |f| %>
-              <%= f.text_field :salon_memo %>
-              <%= f.submit 'メモ登録' %>
-            <% end %>
-          <% else %>
+          </li>
+          <li>取引メモ:
             <%= @reservation.salon_memo %>
+          </li>
+        <% else %>
+          <%= form_for(@reservation, url: admin_salon_reservation_path) do |f| %>
+            <li>取引状態:
+              <%= f.check_box :finish_salon, value: true %>
+            </li>
+            <li>取引メモ:
+              <%= f.text_field :salon_memo %>
+            </li>
+            <%= f.submit '取引完了' %>
           <% end %>
-        </li>
+        <% end %>
       </ul>
     </div>
     <%= link_to 'delete', admin_salon_reservation_path, method: :delete, data: { confirm: "本当に削除しますか？" } %><br/>
