--- a/app/views/admin/reservations/show.html.erb
+++ b/app/views/admin/reservations/show.html.erb
@@ -33,7 +33,10 @@
         <% end %>
       </ul>
     </div>
-    <%= link_to 'delete', admin_salon_reservation_path, method: :delete, data: { confirm: "本当に削除しますか？" } %><br/>
+    <%= link_to '編集', edit_admin_salon_reservation_path %><br/>
+    <% unless @reservation.finish_salon? %>
+      <%= link_to 'delete', admin_salon_reservation_path, method: :delete, data: { confirm: "本当に削除しますか？" } %><br/>
+    <% end %>
     <%= link_to '戻る', :back %>
   </div>
 </main>
