--- a/app/views/admin/salon_reservations/index.html.erb
+++ b/app/views/admin/salon_reservations/index.html.erb
@@ -21,7 +21,7 @@
       <% @books.each.with_index(1) do |book, i| %>
         <tr>
           <td><%= i %></td>
-          <td><%= link_to book.book_time.strftime('%Y年%m月%d日 %H:%M'), admin_salon_salon_reservation_path(id: book.id) %></td>
+          <td><%=  book.simple_time %></td>
           <td><%= link_to '編集', edit_admin_salon_salon_reservation_path(book) %></td>
           <td><%= link_to '削除', admin_salon_salon_reservation_path(book), method: :delete, data: { confirm: "削除しますか？" } %></td>
         </tr>
@@ -29,5 +29,4 @@
       </tbody>
     </table>
   </div>
-
 </main>
