--- a/app/views/admin/stylist_reservations/edit.html.erb
+++ b/app/views/admin/stylist_reservations/edit.html.erb
@@ -1,28 +1,29 @@
-<%= form_for(@stylist_reservation, url: admin_stylist_stylist_reservation_path) do |f| %>
-  <div>
-    <%= f.label :Menu %>
-    <%= f.collection_select :menu_id, current_stylist.menus.all, :id, :menu_name %>
-  </div>
+<div style="width: 15%; height:500px; border: 1px solid;float: left;">
+  <%= render 'admin/stylists/sidebar' %>
+</div>
 
-  <div>
-    <%= f.label :book_time %>
-    <%= f.datetime_select :book_time, minute_step: 5 %>
-  </div>
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+  <%= form_for(@stylist_reservation, url: admin_stylist_stylist_reservation_path) do |f| %>
+    <div>
+      <%= f.label :book_time %><br/>
+      <%= f.datetime_select :book_time, minute_step: 5 %>
+    </div>
 
-  <div>
-    <%= f.label :operation_time %>
-    <%= f.number_field :operation_time, min: 0, step: 5 %>
-  </div>
+    <div>
+      <%= f.label :operation_time %><br/>
+      <%= f.number_field :operation_time, min: 0, step: 5 %>分
+    </div>
 
-  <div>
-    <%= f.label :memo %>
-    <%= f.text_field :memo %>
-  </div>
+    <div>
+      <%= f.label :memo %><br/>
+      <%= f.text_area :memo %>
+    </div>
 
-  <div>
-    <%= f.submit '編集' %>
-  </div>
-<% end %>
-<br/>
-<%= link_to '予約可能時間一覧へ', admin_stylist_stylist_reservations_path %><br/>
-<%= link_to '戻る', :back %>
+    <div>
+      <%= f.submit '編集' %>
+    </div>
+  <% end %>
+  <br/>
+  <%= link_to '予約可能時間一覧へ', admin_stylist_stylist_reservations_path %><br/>
+  <%= link_to '戻る', :back %>
+</main>
