--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -8,6 +8,7 @@
     <table class="table table-striped table-sm">
       <thead>
       <tr>
+        <th>#</th>
         <th>顧客名</th>
         <th>予約日時</th>
         <th>スタイリスト名</th>
@@ -19,8 +20,9 @@
       </thead>
 
       <tbody>
-      <% @reservations.each do |r| %>
+      <% @reservations.each.with_index(1) do |r, i| %>
         <tr>
+          <td><%= i %></td>
           <td><%= r.user.name %></td>
           <td><%= r.stylist_reservation.simple_time %></td>
           <td><%= r.stylist_reservation.stylist.name %></td>
