--- a/app/views/admin/stylist_reservations/show.html.erb
+++ b/app/views/admin/stylist_reservations/show.html.erb
@@ -1,4 +1,6 @@
-<%= render 'admin/stylists/sidebar' %>
+<div class="row">
+  <%= render 'admin/stylists/sidebar' %>
+</div>
 
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
   <h3><%= @stylist_reservation.stylist.name %>の予約<%= @stylist_reservation.id %></h3>
