--- a/app/views/admin/menus/show.html.erb
+++ b/app/views/admin/menus/show.html.erb
@@ -1,8 +1,8 @@
-<div style="width: 15%; height:500px; border: 1px solid;float: left;">
+<div class="row">
   <%= render 'admin/stylists/sidebar' %>
 </div>
 
-<div style="width:80%; border: 1px solid;float: right; margin: auto 0; padding: 10px">
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
   <h2><%= current_stylist.name %></h2>
 
   <h3>メニュー一覧</h3>
@@ -13,6 +13,6 @@
     内容:<%= @menu.content %><br/>
     備考:<%= @menu.memo %><br/>
     <%= link_to 'Edit', edit_admin_stylist_menu_path %>
-    <%= link_to 'Delete',  admin_stylist_menu_path, method: :delete, data: { confirm: 'Are you sure?' }%>
+    <%= link_to 'Delete', admin_stylist_menu_path, method: :delete, data: { confirm: 'Are you sure?' } %>
   </div>
-</div>
+</main>
