--- a/app/views/admin/reservations/index_for_stylist.html.erb
+++ b/app/views/admin/reservations/index_for_stylist.html.erb
@@ -1,4 +1,4 @@
-<div style="width: 15%; height:500px; border: 1px solid;float: left;">
+<div class="row">
   <%= render 'admin/stylists/sidebar' %>
 </div>
 
@@ -26,7 +26,7 @@
           <td><%= r.salon_reservation.salon.name %></td>
           <td><%= r.salon_reservation.salon.place %></td>
           <td><%= r.menu.menu_name %></td>
-          <td><%= link_to '詳細',  reservation_admin_stylist_path(r) %></td>
+          <td><%= link_to '詳細', reservation_admin_stylist_path(r) %></td>
           <td><%= link_to '削除', reservation_admin_stylist_path(r), method: :delete, data: { confirm: "削除しますか？" } %></td>
         </tr>
       <% end %>
