--- a/app/views/admin/salon_reservations/edit.html.erb
+++ b/app/views/admin/salon_reservations/edit.html.erb
@@ -1,5 +1,5 @@
-<div style="width: 15%; height:500px; border: 1px solid;float: left;">
-  <%= render 'admin/salons/sidebar' %>
+<div class="row">
+<%= render 'admin/salons/sidebar' %>
 </div>
 
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
