--- a/app/views/admin/stylist_reservations/edit.html.erb
+++ b/app/views/admin/stylist_reservations/edit.html.erb
@@ -1,4 +1,4 @@
-<div style="width: 15%; height:500px; border: 1px solid;float: left;">
+<div class="row">
   <%= render 'admin/stylists/sidebar' %>
 </div>
 
